# alpaca-trading-rust

./: .env.example  .gitignore  Cargo.toml  E2E_SETUP_GUIDE.md  ENDPOINT_MAPPING.md  IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_IMPLEMENTATION_COMPLETE.md  PLAYWRIGHT_QUICK_START.sh  PLAYWRIGHT_TESTING.md  README.md  README_PLAYWRIGHT_TESTING.md  STRATEGIES_IMPLEMENTATION.md  TESTING_GUIDE.sh  TEST_REPORT.md  start.bat
analytics/: analyze.py  db.py  fetch_bars.py  kronos_bridge.py  patterns.py  requirements.txt  test_live.py
backend/: Cargo.toml
backend/src/: error.rs  main.rs  models.rs  providers.rs  streaming.rs
backend/src/strategies/: listing_arb.rs  mod.rs
data/: autostonks.db  autostonks.db-shm
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/pages/: BasePage.ts  DashboardPage.ts  LoginPage.ts  analytics.page.ts  dashboard.page.ts  login.page.ts
e2e/tests/: analytics.spec.ts  auth.spec.ts  auth_pom.spec.ts  dashboard.spec.ts  options.spec.ts  pom_auth.spec.ts  settings.spec.ts  trading.spec.ts
frontend/src/: App.svelte  main.ts
frontend/src/components/: AgentsWorkspace.svelte  InteractiveTicker.svelte  StrategyPanel.svelte
frontend/src/lib/: api.test.ts  api.ts  types.ts
src/: auth.rs  error.rs  lib.rs  main.rs  math.rs
src/api/: alpaca.rs  mod.rs  price_streamer.rs  ws_manager.rs
src/config/: mod.rs
src/handlers/: agents.rs  credentials.rs  market.rs  misc.rs  mod.rs  stream.rs  watchlist.rs
src/models/: account.rs  mod.rs  option_chain.rs  order.rs  position.rs  websocket.rs
src/routes/: analytics.rs  auth.rs  health.rs  mod.rs  orders.rs  strategies.rs  trading.rs  websocket.rs
src/services/: db.rs  mod.rs  streaming.rs
src/strategies/: delta_neutral.rs  gamma_scalping.rs  listing_arb.rs  listing_arbitrage.rs  mod.rs  put_call_parity.rs  vwap_reversion.rs
static/: app.js  auth-helper.js  dev-console.html  index.html  login.html  settings.html  style.css
static/js/: main.js
tests/: api_integration.rs  routes_integration_tests.rs
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
verification/: e2e_test_results.json  e2e_tests.py  verify_options.py
(+16 files in other folders)
