[package]
name = "alpaca_trading3web"
version = "0.1.0"
edition = "2021"
default-run = "alpaca_trading3web"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Alpaca API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket client/server
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Thread-safe storage for auth
lazy_static = "1.4"
once_cell = "1"

# GUI dependencies (for setup tool)
eframe = "0.31"
egui = "0.31"
async-trait = "0.1.89"

[[bin]]
name = "alpaca_trading3web"
path = "src/main.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[dev-dependencies]
axum-test = "20.0.0"
mockall = "0.14.0"
