[package]
name = "autostonks-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hex = "0.4"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
